--- a/www/index.html
+++ b/www/index.html
@@ -13,7 +13,7 @@
     // device APIs are available
     //
     function onDeviceReady() {
-        navigator.geolocation.getCurrentPosition(onSuccess, onError);
+        navigator.geolocation.getCurrentPosition(onSuccess, onError,{frequency:5000,maximumAge: 0, timeout: 100, enableHighAccuracy:false});
     }
 
     // onSuccess Geolocation
